package final_exam.b3;

public interface Widget {
    String build();
}
